feat: add the data in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=desafiobackendpicpay
+
+spring.h2.console.path=/h2-console
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driverClassName=org.h2.Driver
+
+
+spring.jpa.database-platform=hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
