--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,22 @@
 spring.application.name=desafiobackendpicpay
 
-spring.h2.console.path=/h2-console
+
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 
 
-spring.jpa.database-platform=hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.flyway.enable=true
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
+
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#mock
+authorize.url=AUTHORIZE_URL
+notification.url=NOTIFICATION_URL
+
